# luys-os-lab

./: .gitignore  DATA_LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
core/antibenchmark/: __init__.py  evaluator.py  resonance.py  thresholds.toml
core/antibenchmark/ctm/: __init__.py  co_thinking.py
core/antibenchmark/datasets/: lab_core_50.json  lab_ext_ctm.json
docs/philosophy/: resonance.md
docs/specs/: antibenchmark.md
examples/: run_ctm_demo.py  run_lab_compare.py  run_lab_demo.py
tests/: test_antibenchmark.py
